--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@pinecone-database/pinecone": "^5.1.1",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.49.1",
+    "bcryptjs": "^3.0.2",
     "js-cookie": "^3.0.5",
     "jsdom": "^26.0.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.479.0",
+    "mongoose": "^8.12.1",
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
